[package]
name = "zelly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = "0.13.2"
bevy = { version = "0.13", features = ["bevy_sprite"] }
# bevy_ecs_ldtk = { version = "0.9.0", features = ["atlas"] }
# bevy_ecs_ldtk = { git = "https://github.com/Trouv/bevy_ecs_ldtk.git", features = ["atlas"] }
bevy_ecs_ldtk = { git = "https://github.com/Trouv/bevy_ecs_ldtk.git" }
bevy_ecs_tilemap = { version = "0.12", default-features = false }

[patch.crates-io]
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap/", branch = "main" }
